2023-06-09  <daniel.diaz@univ-paris1.fr>

	* fix issue #39: bug in conditional compilation directives

2023-06-07  <daniel.diaz@univ-paris1.fr>

	* rename pl2wam --pl-state option (and concept) as --pre-load

2023-06-07  <daniel.diaz@univ-paris1.fr>

	* add a consult/2 built-in (consult with options) to pass a pre-load file

2023-06-05  <daniel.diaz@univ-paris1.fr>

	* fix issue #37: bug in format/2-3
	* update the doc

2023-06-04  <daniel.diaz@univ-paris1.fr>

	* fix issue #13: user meta_predicate definition is now returned by predicate_property/2
	* initial support for term_expansion/2 and new pre-load file format (now it is a Prolog text)
	* speed up dynamic predicates with many clauses (for wordnet)
	* improve linedit completion with a new map implementation (improves consult of wordnet files)
	* simplify ChangeLog dates

2023-04-15  <daniel.diaz@univ-paris1.fr>

	* improve compiler speed on large Prolog data bases (for wordnet)
	  (use new map implementation (based on red-black trees) for wam2ma and ma2asm)

2023-04-07  <daniel.diaz@univ-paris1.fr>

	* start version 1.6.0
	* add a Tools directory for tools common to runtime and standalone sub-compilers
	* converge code master with branch and contexts from spa

2023-03-22  <daniel.diaz@univ-paris1.fr>

	* fix issue #32: remove duplicate warning message

2023-03-10  <daniel.diaz@univ-paris1.fr>

	* improve compiler speed on large Prolog data bases
	  (speed up generation of indexing instructions switch_on_atom/integer/structure)
	* speed up bind_variables/2 (also speed up the compiler for byte-code)
	* increase max vars in a term to 2^20 (MAX_VAR_IN_TERM) 

2023-02-17  <daniel.diaz@univ-paris1.fr>

	* increase default Prolog stack sizes and MAX_ATOMS

2023-02-03  <daniel.diaz@univ-paris1.fr>

	* extend exec/4-5 to also accept provided streams + null

2023-12-09  <daniel.diaz@univ-paris1.fr>

	* fix bug in exec/4 under windows (bad stream redirection and child console not hidden)
	* improve fd_prime/1 built-in