@@ -78,6 +78,7 @@ int pl_domain_close_option;
 int pl_domain_flag_value;
 int pl_domain_io_mode;
 int pl_domain_non_empty_list;
+int pl_domain_number_of_arguments;
 int pl_domain_not_less_than_zero;
 int pl_domain_operator_priority;
 int pl_domain_operator_specifier;
@@ -184,6 +185,7 @@ extern int pl_domain_close_option;
 extern int pl_domain_flag_value;
 extern int pl_domain_io_mode;
 extern int pl_domain_non_empty_list;
+extern int pl_domain_number_of_arguments;
 extern int pl_domain_not_less_than_zero;
 extern int pl_domain_operator_priority;
 extern int pl_domain_operator_specifier;
