@@ -2,7 +2,7 @@
 % file    : read_file.pl
 
 
-file_name('/Users/diaz/GP/src/Pl2Wam/read_file.pl').
+file_name('/home/diaz/GP/src/Pl2Wam/read_file.pl').
 
 
 predicate(read_file_init/0,133,static,private,monofile,global,[
